@@ -1,3 +1,7 @@
+Fri Oct  9 15:21:29 CEST 2009
+	Check for error codes from pthread operations (to help with
+	error diagnostics) and abort if something went wrong. -CG
+
 Thu Oct  8 10:43:02 CEST 2009
 	Added check for sockets being '< FD_SETSIZE' (just to be safe). -CG
 
